Added center text on mobil devices

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -6,3 +6,39 @@
 	}
 }
 
+@media (max-width:$screen-sm){
+
+}
+
+.navbar-collapse {
+	@media (max-width:$screen-xs){
+		li {
+			text-align: center;
+			padding: 0.2em;
+			letter-spacing: 0.05em;
+			font-size: 1.2em;
+
+		}
+
+	}
+}
+
+.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+	@media (max-width:$screen-xs){
+		color: $gray-lighter;
+	}
+}
+
+
+.navbar-inverse .navbar-nav .open .dropdown-menu>.active>a {
+	@media (max-width:$screen-xs){
+		font-weight: 900;
+		text-decoration: underline;
+	}
+}
+
+.collapse .menu-menu-container,.collapsing .menu-menu-container {
+	@media (max-width:$screen-sm){
+
+	}
+}
