Added pages/layout to main.scss

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
+@import "pages/layout";
 @import "pages/home";
 @import "pages/how-we-work";
 @import "pages/portfolio";
