--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -32,6 +32,9 @@ $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
+$dark-blue: 				#0f4fd8 !default;
+$light-blue: 				#2bf2f1 !default;
+
 
 //== Scaffolding
 //
@@ -373,7 +376,7 @@ $container-lg:                 $container-large-desktop !default;
 //##
 
 // Basics of a navbar
-$navbar-height:                    60px !default;
+$navbar-height:                    70px !default;
 $navbar-margin-bottom:             $line-height-computed !default;
 $navbar-border-radius:             $border-radius-base !default;
 $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
