--- a/assets/styles/pages/_portfolio.scss
+++ b/assets/styles/pages/_portfolio.scss
@@ -1,1 +1,49 @@
+.portfolio {
+	.grid-one {
+		margin-bottom: 10px;
+		.col {
+			padding-right:0;
+			//padding-left: 0;
+		}
+		.grid-one-image-one, .grid-one-image-three {
+			padding-bottom: 10px;
+		}
+	}
+
+	.col-one{
+		@media(max-width:$screen-lg){
+			padding-left: 5px;
+		}
+	}
+	.grid-two{
+		.col {
+			padding-right:0;
+			//padding-left: 0;
+		}
+		.vertical {
+			@media(min-width:$screen-lg){
+
+			padding-left: 0;
+			}
+		}
+		.col-one{
+			@media(max-width:$screen-lg){
+				padding-left: 5px;
+				width: 49%;
+			}
+	}
+		.col-xs-3 {
+			@media(min-width:$screen-md) and (max-width:$screen-lg){
+				img {
+					height: 310px;
+				}
+			}
+			@media(max-width:$screen-lg){
+			width:25.5%
+			}
+
+		}
+	}
+}
+
 
