added padding top

--- a/assets/styles/pages/_single-project.scss
+++ b/assets/styles/pages/_single-project.scss
@@ -1,5 +1,6 @@
 .single-project {
 	position: relative;
+	padding-top: 90px;
 
 	h3 {
 		font-size: 1.2em;
@@ -88,7 +89,9 @@
 
 	.photo-credit {
 		margin-bottom: 10em;
+		padding-top: 1em;
 		h3{
+
 			font-weight: 100;
 
 		}
