reomoved gradient from carousel arrows

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -59,3 +59,8 @@ img.wp-post-image {
 		}
 	}
 }
+
+.carousel-control.left, .carousel-control.right {
+	background-image:none !important;
+	filter:none !important;
+}
