--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -64,8 +64,16 @@
 		padding-top: 40px;
 		padding-bottom: 0;
 		color: #999;
-		font-weight: 100;
-
+		//font-weight: 400;
+		&:hover {
+			color: $orange;
+		}
+	}
+	.navbar-nav>.open>a,
+	.navbar-nav>.open>a:focus,
+	.navbar-nav>.open>a:hover,
+	.navbar-nav>.active>a:hover{
+		color: $orange;
 	}
 }
 
