--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -64,3 +64,10 @@ img.wp-post-image {
 	background-image:none !important;
 	filter:none !important;
 }
+
+.about-us, .approach, .process {
+	.navbar-default .navbar-nav>li>.dropdown-toggle{
+		color: black;
+	}
+
+}
