added pages to main.scss

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -25,3 +25,5 @@
 @import "pages/single-project";
 @import "pages/process";
 @import "pages/about-us";
+@import "pages/contact";
+@import "pages/approach";
