--- a/assets/styles/pages/_process.scss
+++ b/assets/styles/pages/_process.scss
@@ -10,11 +10,10 @@
 
 		 }
 		 .process-header-img{
-			 max-width: 1600px;
+			// max-width: 1600px;
 			 margin: 0 auto;
 			 img{
 				 z-index: -100;
-				 max-width: 1600px;
 				 margin: 0 auto;
 			 }
 			 @media(min-width:$screen-md){
@@ -40,11 +39,10 @@
 		}
 		.page-header {
 			margin-top: 0;
-		}
 		h1{
 			margin-top: 0;
 			color: black;
-			font-weight: 600;
+			font-weight: 400;
 			@media(min-width:$screen-md){
 				position: absolute;
 				top:-3em;
@@ -53,6 +51,7 @@
 				background: white;
 				text-align: center;
 				padding:0.5em 2em;
+			}
 		}
 		}//h4
 		h4{
