--- a/assets/styles/pages/_process.scss
+++ b/assets/styles/pages/_process.scss
@@ -44,13 +44,13 @@
 			color: black;
 			font-weight: 400;
 			@media(min-width:$screen-md){
-				position: absolute;
-				top:-3em;
-				left: -1.6em;
-				z-index: 200;
+			//	position: absolute;
+			//	top:-3em;
+			//	left: -1.6em;
+			//	z-index: 200;
 				background: white;
-				text-align: center;
-				padding:0.5em 2em;
+			//	text-align: center;
+			//	padding:0.5em 2em;
 			}
 		}
 		}//h4
